# compare_by_address_derive

./: Cargo.toml  README.md
src/: lib.rs
tests/: equality.rs  struct_with_lifetimes.rs
