[package]
name = "compare_by_address_derive"
authors = ["Eric Wyler <ewyler@gmail.com>"]
description = "Derive macro for comparing and hashing structs/unions/enums by address"
repository = "https://github.com/ewyler/compare_by_address_derive"
documentation = "https://docs.rs/compare_by_address"
keywords = ["hash", "pointer", "reference", "derive"]
license = "MIT / Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
by_address = "1.0.4"
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true
